# shadertoy-wgpu

./: .gitignore  Cargo.toml  LICENSE  README.md  shadertoy.frag
src/: full_glsl.frag  lib.rs  main.rs  quad.wgsl
