[package]
name = "shadertoy-wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
naga = { version = "28.0.0", features = ["glsl-in", "spv-out", "wgsl-out"] }
anyhow = "1.0.101"
clap = { version = "4.5.59", features = ["derive"] }
wgpu = "28.0.0"
winit = "0.30.12"
pollster = "0.4.0"
env_logger = "0.11.9"
bytemuck = "1.25.0"